added header, fonts

--- a/app/index.html
+++ b/app/index.html
@@ -8,6 +8,61 @@
     <link rel="stylesheet" href="css/style.min.css" />
   </head>
   <body>
+    <header class="header">
+      <div class="container">
+        <div class="header__inner">
+          <a class="logo" href="#" >
+            <img class="logo__img" src="images/logo.png" alt="logo" >
+          </a>
+          <nav class="menu">
+            <ul class="menu__list">                                                   
+              <li class="menu__list-item">
+                <a class="menu__list-link" href="#">Home</a>
+              </li>
+              <li class="menu__list-item">
+                <a class="menu__list-link" href="#">About</a>
+              </li>
+              <li class="menu__list-item">
+                <a class="menu__list-link" href="#">Services</a>
+              </li>
+              <li class="menu__list-item">
+                <a class="menu__list-link" href="#">Pages</a>
+              </li>
+              <li class="menu__list-item">
+                <a class="menu__list-link" href="#">News</a>
+              </li>
+              <li class="menu__list-item">
+                <a class="menu__list-link" href="#">Contact</a>
+              </li>
+            </ul>
+          </nav>
+          <div class="user-nav">
+            <a class="user-nav__link" href="2#">
+              <div class="user-nav__link-bg" style="background-color: #dcdcdc;">
+                <img class="user-nav__link-img" src="images/icons/search.svg" alt="search icon" >
+              </div>
+            </a>
+            <a class="user-nav__link" href="3#">
+              <div class="user-nav__link-bg">
+                <img class="user-nav__link-img" src="images/icons/like.svg" alt="like icon">
+              <span class="user-nav__num">0</span>
+              </div>
+            </a>
+            <a class="user-nav__link" href="4#">
+              <div class="user-nav__link-bg">
+                <img class="user-nav__link-img" src="images/icons/basket.svg" alt="basket icon">
+              <span class="user-nav__num">0</span>
+              </div>
+            </a>
+            <a class="user-nav__link" href="5#">
+              <div class="user-nav__link-bg" style="background-color: #a3bbc8;">
+                <img class="user-nav__link-img" src="images/icons/more.svg" alt="more icon" style="padding-top: 12px; color: white; padding-left: 1px;">
+              </div>
+            </a>
+          </div>
+        </div>
+      </div>
+    </header>
    
     <script src="js/main.min.js"></script>
   </body>
