--- a/app/index.html
+++ b/app/index.html
@@ -81,7 +81,60 @@
       </div>
     </header>
     <main class="main">
-      
+      <section class="top-slider">
+        <div class="container__one">
+          <div class="top-slider__inner">
+            <div class="top-slider__item">
+              <div class="top-slider__content">
+                <h3 class="top-slider__title">SMART AND TRENDY</h3>
+                <p class="top-slider__text">
+                  Dolor sit amet, consectetur adipisicing elit, <br> sed do eiusmod
+                  tempor incididunt
+                </p>
+                <span class="top-slider__btn">
+                  <a class="top-slider__link" href="#" >
+                  Shop Now
+                </a>
+                <img class="top-slider__link-next" src="images/slider/link-next.svg" alt="arrow next" >
+                </span> 
+              </div>
+              <img class="top-slider__img" src="images/slider/photo.png" alt="slider images"/>
+            </div>
+            <div class="top-slider__item">
+              <div class="top-slider__content">
+                <h3 class="top-slider__title">SMART AND TRENDY</h3>
+                <p class="top-slider__text">
+                  Dolor sit amet, consectetur adipisicing elit, <br> sed do eiusmod
+                  tempor incididunt
+                </p>
+                <span class="top-slider__btn">
+                  <a class="top-slider__link" href="#" >
+                  Shop Now
+                </a>
+                <img class="top-slider__link-next" src="images/slider/link-next.svg" alt="arrow next" >
+                </span>
+              </div>
+              <img class="top-slider__img" src="images/slider/photo.png" alt="slider images"/>
+            </div>
+            <div class="top-slider__item">
+              <div class="top-slider__content">
+                <h3 class="top-slider__title">SMART AND TRENDY</h3>
+                <p class="top-slider__text">
+                  Dolor sit amet, consectetur adipisicing elit, <br> sed do eiusmod
+                  tempor incididunt
+                </p>
+                <span class="top-slider__btn">
+                  <a class="top-slider__link" href="#" >
+                  Shop Now
+                </a>
+                <img class="top-slider__link-next" src="images/slider/link-next.svg" alt="arrow next" >
+                </span>
+              </div>
+              <img class="top-slider__img" src="images/slider/photo.png" alt="slider images"/>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer class="footer">
       <div class="container__two">
