--- a/app/index.html
+++ b/app/index.html
@@ -88,51 +88,272 @@
               <div class="top-slider__content">
                 <h3 class="top-slider__title">SMART AND TRENDY</h3>
                 <p class="top-slider__text">
-                  Dolor sit amet, consectetur adipisicing elit, <br> sed do eiusmod
-                  tempor incididunt
+                  Dolor sit amet, consectetur adipisicing elit, <br />
+                  sed do eiusmod tempor incididunt
                 </p>
                 <span class="top-slider__btn">
-                  <a class="top-slider__link" href="#" >
-                  Shop Now
-                </a>
-                <img class="top-slider__link-next" src="images/slider/link-next.svg" alt="arrow next" >
-                </span> 
+                  <a class="top-slider__link" href="#"> Shop Now </a>
+                  <img
+                    class="top-slider__link-next"
+                    src="images/slider/link-next.svg"
+                    alt="arrow next"
+                  />
+                </span>
               </div>
-              <img class="top-slider__img" src="images/slider/photo.png" alt="slider images"/>
+              <img
+                class="top-slider__img"
+                src="images/slider/photo.png"
+                alt="slider images"
+              />
             </div>
             <div class="top-slider__item">
               <div class="top-slider__content">
                 <h3 class="top-slider__title">SMART AND TRENDY</h3>
                 <p class="top-slider__text">
-                  Dolor sit amet, consectetur adipisicing elit, <br> sed do eiusmod
-                  tempor incididunt
+                  Dolor sit amet, consectetur adipisicing elit, <br />
+                  sed do eiusmod tempor incididunt
                 </p>
                 <span class="top-slider__btn">
-                  <a class="top-slider__link" href="#" >
-                  Shop Now
-                </a>
-                <img class="top-slider__link-next" src="images/slider/link-next.svg" alt="arrow next" >
+                  <a class="top-slider__link" href="#"> Shop Now </a>
+                  <img
+                    class="top-slider__link-next"
+                    src="images/slider/link-next.svg"
+                    alt="arrow next"
+                  />
                 </span>
               </div>
-              <img class="top-slider__img" src="images/slider/photo.png" alt="slider images"/>
+              <img
+                class="top-slider__img"
+                src="images/slider/photo.png"
+                alt="slider images"
+              />
             </div>
             <div class="top-slider__item">
               <div class="top-slider__content">
                 <h3 class="top-slider__title">SMART AND TRENDY</h3>
                 <p class="top-slider__text">
-                  Dolor sit amet, consectetur adipisicing elit, <br> sed do eiusmod
-                  tempor incididunt
+                  Dolor sit amet, consectetur adipisicing elit, <br />
+                  sed do eiusmod tempor incididunt
                 </p>
                 <span class="top-slider__btn">
-                  <a class="top-slider__link" href="#" >
-                  Shop Now
-                </a>
-                <img class="top-slider__link-next" src="images/slider/link-next.svg" alt="arrow next" >
+                  <a class="top-slider__link" href="#"> Shop Now </a>
+                  <img
+                    class="top-slider__link-next"
+                    src="images/slider/link-next.svg"
+                    alt="arrow next"
+                  />
                 </span>
               </div>
-              <img class="top-slider__img" src="images/slider/photo.png" alt="slider images"/>
+              <img
+                class="top-slider__img"
+                src="images/slider/photo.png"
+                alt="slider images"
+              />
             </div>
           </div>
+        </div>
+      </section>
+      <section class="products-info">
+        <div class="information">
+          <div class="container__one">
+            <div class="info">
+              <div class="info__item">
+                <svg class="info__item-img" width="49" height="50">
+                  <style>
+                    .a {
+                      fill: #a3bbc8;
+                    }
+                  </style>
+                  <path
+                    class="a"
+                    d="m45.3 11.7c-0.3-0.5-0.8-0.6-1.3-0.3-0.4 0.2-0.6 0.8-0.3 1.3 2.3 3.6 3.4 7.7 3.4 11.9 0 12.6-10.1 22.7-22.6 22.7-5 0-9.7-1.5-13.6-4.5-0.5-0.3-1-0.2-1.4 0.2-0.3 0.4-0.2 1 0.2 1.3 4.3 3.2 9.4 4.9 14.8 4.9 13.5 0 24.5-11 24.5-24.6 0-4.6-1.3-9-3.7-12.9zm-23 21.9h-7.6l4.8-4.7c2.4-2.4 3.7-5.7 3.7-9.1 0-3.2-2.6-5.8-5.8-5.8-3.2 0-5.9 2.6-5.9 5.8 0 0.5 0.5 1 1 1 0.5 0 0.9-0.5 0.9-1 0-2.2 1.8-3.9 4-3.9 2.2 0 3.9 1.7 3.9 3.9 0 2.9-1.1 5.7-3.2 7.7l-6.3 6.4c-0.3 0.3-0.3 0.7-0.2 1 0.1 0.4 0.5 0.6 0.9 0.6h9.8c0.5 0 0.9-0.4 0.9-1 0-0.5-0.4-0.9-0.9-0.9zm15-6.4h-2.6v-1.5c0-0.6-0.4-1-0.9-1-0.5 0-1 0.4-1 1v1.5h-5.2l5.2-8.9v4.2c0 0.5 0.5 1 1 1 0.5 0 0.9-0.5 0.9-1v-7.6q0 0 0 0c0-0.3-0.1-0.6-0.4-0.8-0.5-0.3-1.1-0.1-1.3 0.3l-7.9 13.2c-0.2 0.3-0.2 0.7 0 1 0.2 0.3 0.5 0.4 0.8 0.4h6.9v5.5c0 0.6 0.5 1 1 1 0.5 0 0.9-0.4 0.9-1v-5.5h2.6c0.5 0 1-0.4 1-0.9 0-0.5-0.5-0.9-1-0.9zm5.4-22.7c-0.1-0.5-0.5-0.9-1-0.9-0.5 0-0.9 0.5-0.9 1v1.7q-2.8-2.5-6.3-4.1c-3.2-1.4-6.6-2.1-10-2.1-13.6 0-24.6 11-24.6 24.5 0 6.7 2.6 12.9 7.4 17.6q0.3 0.2 0.6 0.2 0.4 0 0.7-0.2c0.4-0.4 0.4-1 0-1.4-4.4-4.3-6.8-10-6.8-16.1 0-12.6 10.2-22.7 22.7-22.7 5.5 0 10.9 2 15.1 5.7l-1.9 0.1c-0.5 0-0.9 0.4-0.9 0.9 0 0.5 0.4 1 0.9 1q0.1 0 0.1 0l4-0.1c0.5-0.1 1-0.5 0.9-1z"
+                  />
+                </svg>
+                <span class="info__item-inform">
+                  <h5 class="info__item-title">Support 24/7.</h5>
+                  <p class="info__item-text">
+                    Contact us 24 hours a day, <br />
+                    7 days a week.
+                  </p>
+                </span>
+              </div>
+              <div class="info__item">
+                <svg class="info__item-img" width="50" height="30">
+                  <style>
+                    .a {
+                      fill: #a3bbc8;
+                    }
+                  </style>
+                  <path
+                    fill-rule="evenodd"
+                    class="a"
+                    d="m10.6 6.1c0 0.5-0.3 0.8-0.8 0.8h-6.1c-0.4 0-0.8-0.3-0.8-0.8 0-0.4 0.4-0.8 0.8-0.8h6.1c0.5 0 0.8 0.4 0.8 0.8zm0.5 11c0 0.5-0.3 0.8-0.8 0.8h-5.6c-0.4 0-0.7-0.3-0.7-0.8 0-0.4 0.3-0.8 0.7-0.8h5.6c0.5 0 0.8 0.4 0.8 0.8zm-2.1-4.7c0 0.4-0.3 0.8-0.8 0.8h-6.6c-0.4 0-0.8-0.4-0.8-0.8 0-0.4 0.4-0.8 0.8-0.8h6.6c0.5 0 0.8 0.4 0.8 0.8zm0 11c0 0.4-0.3 0.8-0.8 0.8h-0.6c-0.4 0-0.8-0.4-0.8-0.8 0-0.4 0.4-0.8 0.8-0.8h0.6c0.5 0 0.8 0.4 0.8 0.8zm-3.2 0c0 0.4-0.4 0.8-0.8 0.8h-3.4c-0.4 0-0.8-0.4-0.8-0.8 0-0.4 0.4-0.8 0.8-0.8h3.4c0.4 0 0.8 0.4 0.8 0.8zm44.1-12.5v14c0 0.5-0.3 0.8-0.8 0.8h-2.7c-0.4 2.4-2.5 4.2-5 4.2-2.4 0-4.5-1.8-4.9-4.2h-11.2c-0.4 2.4-2.5 4.2-4.9 4.2-2.5 0-4.6-1.8-4.9-4.2h-2.5c-0.4 0-0.7-0.3-0.7-0.8v-23.5c0-0.5 0.3-0.8 0.7-0.8h6.1c0.4 0 0.8 0.3 0.8 0.8 0 0.4-0.4 0.7-0.8 0.7h-5.3v22.1h1.7c0.3-2.4 2.4-4.2 4.9-4.2 2.4 0 4.5 1.8 4.9 4.2h8.3v-1.2c0-0.4 0.4-0.8 0.8-0.8 0.4 0 0.8 0.4 0.8 0.8v1.2h1.3c0.4-2.4 2.5-4.2 4.9-4.2 2.5 0 4.6 1.8 5 4.2h2v-13.3c0-3.6-3-6.6-6.6-6.6h-6.6v15.1c0 0.4-0.4 0.7-0.8 0.7-0.4 0-0.8-0.3-0.8-0.7v-17.3h-11.4c-0.4 0-0.8-0.3-0.8-0.7 0-0.5 0.4-0.8 0.8-0.8h12.2c0.4 0 0.8 0.3 0.8 0.8v1.4h6.6c4.5 0 8.1 3.6 8.1 8.1zm-26.1 14c0-1.8-1.6-3.4-3.4-3.4-1.9 0-3.4 1.6-3.4 3.4 0 1.9 1.5 3.4 3.4 3.4 1.8 0 3.4-1.5 3.4-3.4zm21 0c0-1.8-1.5-3.4-3.4-3.4-1.8 0-3.4 1.6-3.4 3.4q0 0 0 0 0 0 0 0c0 1.9 1.6 3.4 3.4 3.4 1.9 0 3.4-1.5 3.4-3.4zm2-14v3.2c0 0.4-0.4 0.8-0.8 0.8h-8.5c-0.4 0-0.7-0.4-0.7-0.8v-7.4c0-0.4 0.3-0.8 0.7-0.8h4.3c2.8 0 5 2.2 5 5zm-1.6 0c0-1.9-1.5-3.4-3.4-3.4h-3.5v5.8h6.9zm-22.8 14.1c0 1.1-0.9 2-2 2-1.1 0-2.1-0.9-2.1-2 0-1.1 1-2 2.1-2 1.1 0 2 0.9 2 2zm-1.6 0c0-0.3-0.2-0.5-0.4-0.5-0.3 0-0.5 0.2-0.5 0.5 0 0.2 0.2 0.4 0.5 0.4 0.2 0 0.4-0.2 0.4-0.4zm22.7 0c0 1.1-0.9 2-2.1 2-1.1 0-2-0.9-2-2 0-1.1 0.9-2 2-2 1.2 0 2.1 0.9 2.1 2zm-1.6 0c0-0.3-0.2-0.5-0.5-0.5-0.2 0-0.4 0.2-0.4 0.5 0 0.2 0.2 0.4 0.4 0.4 0.3 0 0.5-0.2 0.5-0.4zm4.9-7.1v2c0 0.4-0.4 0.7-0.8 0.7-0.4 0-0.8-0.3-0.8-0.7v-2c0-0.5 0.4-0.8 0.8-0.8 0.4 0 0.8 0.3 0.8 0.8z"
+                  />
+                </svg>
+                <span class="info__item-inform">
+                  <h5 class="info__item-title">Delivery.</h5>
+                  <p class="info__item-text">Free shipping on all US order.</p>
+                </span>
+              </div>
+              <div class="info__item">
+                <svg class="info__item-img" width="50" height="45">
+                  <style>
+                    .a {
+                      fill: #a3bbc8;
+                    }
+                  </style>
+                  <path
+                    fill-rule="evenodd"
+                    class="a"
+                    d="m47.3 32.2v8.2c0 2.1-1.8 3.9-3.9 3.9h-39.3c-2.1 0-3.8-1.8-3.8-3.9v-23.6c0-2.1 1.7-3.8 3.8-3.8h25.1c0.5 0 0.9 0.3 0.9 0.8 0 0.5-0.4 0.8-0.9 0.8h-25.1c-1.2 0-2.2 1-2.2 2.2v2.9h9.9c0.5 0 0.8 0.4 0.8 0.8 0 0.5-0.3 0.9-0.8 0.9h-9.9v5.4h27.3c0.5 0 0.9 0.4 0.9 0.9 0 0.4-0.4 0.8-0.9 0.8h-27.3v11.9c0 1.2 1 2.2 2.2 2.2h39.3c1.2 0 2.2-1 2.2-2.2v-8.2c0-0.5 0.4-0.9 0.8-0.9 0.5 0 0.9 0.4 0.9 0.9zm-17.2-11.7c0 0.5-0.4 0.9-0.9 0.9h-14.2c-0.5 0-0.8-0.4-0.8-0.9 0-0.4 0.3-0.8 0.8-0.8h14.2c0.5 0 0.9 0.4 0.9 0.8zm-9.3 11.6c0 0.4-0.4 0.8-0.8 0.8h-14.3c-0.5 0-0.8-0.4-0.8-0.8 0-0.5 0.3-0.9 0.8-0.9h14.3c0.4 0 0.8 0.4 0.8 0.9zm-6.1 4c0 0.4-0.3 0.8-0.8 0.8h-8.2c-0.5 0-0.8-0.4-0.8-0.8 0-0.5 0.3-0.9 0.8-0.9h8.2c0.5 0 0.8 0.4 0.8 0.9zm33-15.3v-4.8c0-0.7-0.6-1.4-1.4-1.4h-11.9c-0.7 0-1.3 0.7-1.3 1.4v10.8c0 0.7 0.6 1.3 1.3 1.3h11.9c0.8 0 1.4-0.6 1.4-1.3v-3.2c0-0.5 0.4-0.9 0.8-0.9 0.5 0 0.9 0.4 0.9 0.9v3.2c0 1.6-1.4 3-3.1 3h-11.9c-1.6 0-3-1.4-3-3v-10.8c0-1.4 1-2.7 2.4-3v-6c0-3.6 2.9-6.6 6.6-6.6 3.6 0 6.6 3 6.6 6.6v6c1.3 0.3 2.4 1.6 2.4 3v4.8c0 0.4-0.4 0.8-0.9 0.8-0.4 0-0.8-0.4-0.8-0.8zm-2.4-7.8v-6c0-2.7-2.2-4.9-4.9-4.9-2.7 0-4.9 2.2-4.9 4.9v6zm-1.9 7.4c0 1.4-0.9 2.6-2.2 3v2c0 0.5-0.4 0.8-0.9 0.8-0.4 0-0.8-0.3-0.8-0.8v-2c-1.3-0.4-2.3-1.6-2.3-3 0-1.7 1.4-3.1 3.1-3.1 1.7 0 3.1 1.4 3.1 3.1zm-1.6 0c0-0.8-0.7-1.4-1.5-1.4-0.7 0-1.4 0.6-1.4 1.4 0 0.8 0.7 1.4 1.4 1.4 0.8 0 1.5-0.6 1.5-1.4z"
+                  />
+                </svg>
+                <span class="info__item-inform">
+                  <h5 class="info__item-title">100% Payment secure.</h5>
+                  <p class="info__item-text">
+                    We ensure secure payment <br />
+                    with PEV.
+                  </p>
+                </span>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="products">
+          <div class="container__two">
+            <div class="products-top">
+              <h2 class="title">Products of the week</h2>
+              <div class="products__filter-btn">
+                <button class="products__btn" data-filter="all">All</button>
+                <button class="products__btn" data-filter=".category-a">
+                  Furnitures
+                </button>
+                <button class="products__btn" data-filter=".category-b">
+                  Chairs
+                </button>
+                <button class="products__btn" data-filter=".category-c">
+                  Lighting
+                </button>
+                <button class="products__btn" data-filter=".category-d">
+                  Decor
+                </button>
+              </div>
+            </div>
+            <div class="products-content">
+              <div class="products__item mix category-b">
+                <a href="#" class="products__item-link">
+                  <img
+                    class="products__item-link-img"
+                    src="images/products/1.jpg"
+                    alt="products photo"
+                  />
+                  <span class="products__item-inform">
+                    <h6 class="products__item-link-title">Wooden radio</h6>
+                    <p class="products__item-link-price">$29.00</p>
+                  </span>
+                </a>
+              </div>
+              <div class="products__item mix category-b">
+                <a href="#" class="products__item-link">
+                  <img
+                    class="products__item-link-img"
+                    src="images/products/2.jpg"
+                    alt="products photo"
+                  />
+                  <span class="products__item-inform">
+                    <h6 class="products__item-link-title">Wooden chair</h6>
+                    <p class="products__item-link-price">$29.00</p>
+                  </span>
+                </a>
+              </div>
+              <div class="products__item mix category-a">
+                <a href="#" class="products__item-link">
+                  <img
+                    class="products__item-link-img"
+                    src="images/products/3.jpg"
+                    alt="products photo"
+                  />
+                  <span class="products__item-inform">
+                    <h6 class="products__item-link-title">White chair</h6>
+                    <p class="products__item-link-price">$29.00</p>
+                  </span>
+                </a>
+              </div>
+              <div class="products__item mix category-d">
+                <a href="#" class="products__item-link">
+                  <img
+                    class="products__item-link-img"
+                    src="images/products/4.jpg"
+                    alt="products photo"
+                  />
+                  <span class="products__item-inform">
+                    <h6 class="products__item-link-title">Retro table</h6>
+                    <p class="products__item-link-price">$29.00</p>
+                  </span>
+                </a>
+              </div>
+              <div class="products__item mix category-c">
+                <a href="#" class="products__item-link">
+                  <img
+                    class="products__item-link-img"
+                    src="images/products/5.jpg"
+                    alt="products photo"
+                  />
+                  <span class="products__item-inform">
+                    <h6 class="products__item-link-title">Wooden radio</h6>
+                    <p class="products__item-link-price">$29.00</p>
+                  </span>
+                </a>
+              </div>
+              <div class="products__item mix category-c">
+                <a href="#" class="products__item-link">
+                  <img
+                    class="products__item-link-img"
+                    src="images/products/6.jpg"
+                    alt="products photo"
+                  />
+                  <span class="products__item-inform">
+                    <h6 class="products__item-link-title">Wooden chair</h6>
+                    <p class="products__item-link-price">$29.00</p>
+                  </span>
+                </a>
+              </div>
+              <div class="products__item mix category-d">
+                <a href="#" class="products__item-link">
+                  <img
+                    class="products__item-link-img"
+                    src="images/products/7.jpg"
+                    alt="products photo"
+                  />
+                  <span class="products__item-inform">
+                    <h6 class="products__item-link-title">White chair</h6>
+                    <p class="products__item-link-price">$29.00</p>
+                  </span>
+                </a>
+              </div>
+              <div class="products__item mix category-a">
+                <a href="#" class="products__item-link">
+                  <img
+                    class="products__item-link-img"
+                    src="images/products/8.jpg"
+                    alt="products photo"
+                  />
+                  <span class="products__item-inform">
+                    <h6 class="products__item-link-title">Retro table</h6>
+                    <p class="products__item-link-price">$29.00</p>
+                  </span>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="products-add"></div>
+      </section>
+      <section class="video-fashion">
+        <div class="video-fashion__inner">
+          <a class="video-fashion__popup" href="https://www.youtube.com/watch?v=RK4PntXY-Og" data-fancybox>
+            <img class="video-fashion__play" src="images/video-play.svg" alt="video play button" >
+          </a>
         </div>
       </section>
     </main>
