home page is ready

--- a/app/index.html
+++ b/app/index.html
@@ -586,7 +586,7 @@
                     Black
                   </h4>
                   <p class="products-button__text">Classic</p>
-                  <img src="images/products/new_1.jpg" alt="" class="products-button__img" />
+                  <img src="images/products/new_1.jpg" alt="" class="products-button__img products-button__img-1" />
                 </a>
                 <a class="products-new-button mix category-f" href="#">
                   <h4 class="products-button__title">
@@ -594,7 +594,7 @@
                     Bamboo
                   </h4>
                   <p class="products-button__text">Classic</p>
-                  <img src="images/products/new_2.jpg" alt="" class="products-button__img" />
+                  <img src="images/products/new_2.jpg" alt="" class="products-button__img products-button__img-2" />
                 </a>
                 <a class="products-new-button mix category-g" href="#">
                   <h4 class="products-button__title">
@@ -602,7 +602,7 @@
                     Chair
                   </h4>
                   <p class="products-button__text">Classic</p>
-                  <img src="images/products/new_3.jpg" alt="" class="products-button__img" />
+                  <img src="images/products/new_3.jpg" alt="" class="products-button__img products-button__img-3" />
                 </a>
                 <a class="products-new-button mix category-h" href="#">
                   <h4 class="products-button__title">
@@ -610,7 +610,7 @@
                     Chair
                   </h4>
                   <p class="products-button__text">Classic</p>
-                  <img src="images/products/new_4.jpg" alt="" class="products-button__img" />
+                  <img src="images/products/new_4.jpg" alt="" class="products-button__img products-button__img-4" />
                 </a>
                 <a class="products-new-button mix category-h" href="#">
                   <h4 class="products-button__title">
@@ -618,7 +618,7 @@
                     Chair
                   </h4>
                   <p class="products-button__text">Classic</p>
-                  <img src="images/products/new_5.jpg" alt="" class="products-button__img" />
+                  <img src="images/products/new_5.jpg" alt="" class="products-button__img products-button__img-5" />
                 </a>
                 <a class="products-new-button mix category-f" href="#">
                   <h4 class="products-button__title">
@@ -626,7 +626,7 @@
                     Bamboo
                   </h4>
                   <p class="products-button__text">Classic</p>
-                  <img src="images/products/new_6.jpg" alt="" class="products-button__img" />
+                  <img src="images/products/new_6.jpg" alt="" class="products-button__img products-button__img-6" />
                 </a>
               </div>
             </div>
